<resources>
    <string name="app_name">Drawer Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_import">Import</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_slideshow">Slideshow</string>
    <string name="action_tools">Tools</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="tab3">Tab3</string>
    <string name="communication">Communication</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="open_navigation_drawer">Open navigatio drawer</string>
</resources>