<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        >
        <item
            android:id="@+id/action_import"
            android:title="@string/action_import"
            android:icon="@drawable/ic_camera"/>
        <item
            android:id="@+id/action_gallery"
            android:title="@string/action_gallery"
            android:icon="@drawable/ic_gallery"/>
        <item
            android:id="@+id/action_slideShow"
            android:title="@string/action_slideshow"
            android:icon="@drawable/ic_slide"/>
        <item
            android:id="@+id/action_tools"
            android:title="@string/action_tools"
            android:icon="@drawable/ic_tool"/>
    </group>

    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/subtitle"
            android:title="@string/communication">
            <menu>
                <item
                    android:id="@+id/action_share"
                    android:title="@string/action_share"
                    android:icon="@drawable/ic_share"/>
                <item
                    android:id="@+id/action_send"
                    android:title="@string/action_send"
                    android:icon="@drawable/ic_send"/>
            </menu>

        </item>

    </group>

</menu>